@@ -1,5 +1,6 @@
 plugins {
     id("java")
+    id("application")
 }
 
 group = "org.kjw"
@@ -10,8 +11,23 @@ repositories {
 }
 
 dependencies {
-    testImplementation(platform("org.junit:junit-bom:5.10.0"))
-    testImplementation("org.junit.jupiter:junit-jupiter")
+    implementation("org.openjfx:javafx-base:20.0.2")
+    implementation("org.openjfx:javafx-controls:20.0.2")
+    implementation("org.openjfx:javafx-fxml:20.0.2")
+    implementation("org.openjfx:javafx-graphics:20.0.2")
+}
+
+application {
+    mainClass.set("org.kjw.reetrantlock_example.Main") // 메인 클래스 이름으로 변경
+    applicationDefaultJvmArgs = listOf(
+        "--module-path", "/path/to/javafx-sdk/lib", // JavaFX SDK 경로
+        "--add-modules", "javafx.controls,javafx.fxml"
+    )
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_11
+    targetCompatibility = JavaVersion.VERSION_11
 }
 
 tasks.test {
